mp3 instead of ogg

--- a/_layouts/podcast.html
+++ b/_layouts/podcast.html
@@ -11,7 +11,7 @@ layout: default
 
 <section>
     <audio class="podcast" preload="auto" controls>
-      <source src="{{ page.ogg-url | prepend: site.baseurl | prepend: site.url }}" type="audio/ogg" />
+      <source src="{{ page.mp3-url | prepend: site.baseurl | prepend: site.url }}" type="audio/mp3" />
     </audio>
 </section>
 
